<resources>
    <string name="app_name">Hi Five Soccer</string>

    <string name="action_settings">Mon profil</string>
    <string name="action_logout">Déconnexion</string>

    <string name="title_activity_login">Connexion</string>
    <string name="act_login_email">Adresse email</string>
    <string name="act_login_password">Mot de passe</string>
    <string name="act_login_button">Se connecter</string>
    <string name="act_login_subsribe_text">Inscrivez-vous sur Hi Five Soccer</string>

    <string name="title_activity_subscribe">Inscription</string>
    <string name="act_subscribe_email">Adresse email</string>
    <string name="act_subscribe_button">Valider l\'inscription</string>
    <string name="act_login_password_confirmation">Confirmez votre mot de passe</string>
    <string name="act_subscribe_login_text">Déjà un compte ? Connectez-vous</string>
    <string name="act_subscribe_name">Nom d\'utilisateur</string>

    <string name="hifive_generic_error">Une erreur est survenue.</string>
    <string name="hifive_myself_key">myself</string>
    <string name="hifive_pref_key">hifive_prefs</string>

    <string name="error_offline">La connexion à internet n\'a pas pu être établie.</string>
    <string name="dialog_exit_msg">Êtes vous certain(e) de vouloir vous déconnecter ?</string>
    <string name="dialog_exit_title">Se déconnecter ?</string>
    <string name="yes">Oui</string>
    <string name="cancel">Non</string>

    <string name="from_empty">Veuillez remplir tous les champs</string>

    <string name="act_login_fail">Une erreur s\'est produite pendant la connexion. \nVeuillez réessayer ultérieurement.</string>
    <string name="act_login_error">Les informations renseignées ne correspondent pas. \nVeuillez vérifier et réessayer.</string>
    <string name="act_mygames_label">Mes matchs</string>
    <string name="title_activity_new_game">Organiser un match</string>

    <string name="hello_world">Hello world!</string>
    <string name="act_newgame_place">Nom de la salle</string>
    <string name="act_newgame_place_address">Adresse de la salle</string>
    <string name="act_newgame_date">Date</string>
    <string name="act_newgame_guest">Inviter des amis</string>
    <string name="act_newgame_button">Créer le match</string>
    <string name="act_newgame_visibility">Privé</string>

    <string name="title_activity_friends_list">Inviter des amis</string>
    <string name="act_list_friends_add_button">Ajouter</string>
    <string name="act_list_friends_remove_button">Annuler</string>
    <string name="title_activity_game_detail">Fiche de match</string>
    <string name="act_game_detail_team_a">Équipe A</string>
    <string name="act_game_detail_team_b">Équipe B</string>
    <string name="game_menu_team_a">Équipe A</string>
    <string name="game_menu_team_b">Équipe B</string>
    <string name="game_menu_exit">Quitter la partie</string>
    <string name="game_menu_default">Participer</string>
    <string name="dialog_exit_game_msq">Quitter la partie !</string>
    <string name="dialog_exit_game_title">Êtes vous certain(e) de ne pas vouloir participer à ce match ?</string>
    <string name="game_detail_add_player_button">INVITER</string>
    <string name="act_game_detail_organizer_label">Organisé par</string>

    <string name="connexion">Connexion…</string>

    <string name="loading">Chargement…</string>
    <string name="act_new_game_description">Message (Informations)</string>
    <string name="act_new_game_price">Prix par participant</string>

    <string name="hifive_token_key">token</string>
    <string name="act_newgame_time">Heure</string>
    <string name="match_empty_list">Il n\'y a pas de match pour le moment.</string>
    <string name="notifications_empty_list">Vous n\'avez pas de match en attente pour le moment.</string>
    <string name="mygames_empty_list">Pas de match prévu pour l\'instant. \nOrganise un match avec tes amis !</string>
    <string name="friends_empty_list">Il n\'y a personne à inviter.</string>
    <string name="title_activity_user_settings">Modifier mon profil</string>
    <string name="act_settings_position">Poste de jeux favoris</string>
    <string name="act_settings_avatar">Modifier ma photo de profil</string>
    <string name="act_user_settings_picture_empty">Vous n\'avez pas choisi d\'image</string>
    <string name="act_user_settings_picture_done">La photo de profil a bien été modifié.</string>
    <string name="act_game_detail_left_msg">Vous avez quitté le match.</string>
    <string name="action_delete">Supprimer ce match</string>
    <string name="title_activity_profil">Profil</string>
    <string name="act_profil_win">Victoires</string>
    <string name="act_profil_matchs_count">Matchs joués</string>
    <string name="act_game_detail_price_msg">€ / participant</string>
    <string name="dialog_game_remove_player">Voulez-vous retirer ce joueur du match ?</string>
    <string name="act_notifications_remove">Ne pas participer</string>
    <string name="act_notification_organizer_text">Vous êtes invitez au match de</string>
    <string name="act_mygame_organizer_text">Vous participez au match de</string>
    <string name="act_mygame_end">FINI</string>
    <string name="game_detail_delete">Votre match a bien été supprimé</string>
    <string name="dialog_game_delete">Êtes-vous sûr de vouloir supprimer ce match ?</string>
    <string name="act_splash_network">Réseau indisponible. \nEn attente de connexion…</string>
    <string name="notifications_title">Invitations</string>
    <string name="action_done">Match terminé</string>
    <string name="game_done_msg">Quelle équipe a remporté ce match ?</string>
    <string name="act_mygame_organizer_done">Vous avez participé au match de</string>
    <string name="list_game_winner_label">Vainqueur :</string>
</resources>
