<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hifivesoccer.SubscribeActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/act_subscribe_name"
        android:hint="@string/act_subscribe_name"
        android:textStyle="italic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="text" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/act_subscribe_email"
        android:hint="@string/act_login_email"
        android:textStyle="italic"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/act_subscribe_password"
            android:hint="@string/act_login_password"
            android:textStyle="italic"
            android:paddingLeft="10dp"
            android:paddingRight="40dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/togglePasswordVisibility"
            android:button="@drawable/checkbox_show_password_style"
            android:background="@null"
            android:onClick="toggleVisibility"
            android:paddingRight="15dp"
            android:paddingLeft="0dp"
            android:layout_alignBaseline="@+id/act_subscribe_password"
            android:layout_alignBottom="@+id/act_subscribe_password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/act_login_button"
        android:onClick="onClickSubscribe"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_subscribe_button"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:text="@string/act_subscribe_login_text"
        android:textStyle="italic"
        android:onClick="onClickLogin"
        android:clickable="true" />

</LinearLayout>
