<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hifivesoccer.LoginActivity"
    android:background="@color/primary"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <ImageView android:src="@drawable/hifive_white_line"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:contentDescription="@string/app_name" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/act_login_email"
            android:hint="@string/act_login_email"
            android:textStyle="italic"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/act_login_password"
            android:hint="@string/act_login_password"
            android:layout_below="@+id/act_login_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/act_login_email"
            android:layout_alignEnd="@+id/act_login_email"
            android:background="@color/white"
            android:paddingRight="40dp"
            android:paddingEnd="40dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="10dp"
            android:textStyle="italic" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/togglePasswordVisibility"
            android:button="@drawable/checkbox_show_password_style"
            android:background="@null"
            android:onClick="toggleVisibility"
            android:paddingRight="15dp"
            android:paddingLeft="0dp"
            android:layout_alignBaseline="@+id/act_login_password"
            android:layout_alignBottom="@+id/act_login_password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/act_login_button"
            android:onClick="onClickLogin"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_login_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/act_login_button"
            android:textColor="@color/white"
            android:background="@color/primary_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_login_button"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:text="@string/act_login_subsribe_text"
            android:textStyle="italic"
            android:onClick="onClickRegister"
            android:clickable="true" />

    </RelativeLayout>

</LinearLayout>
